# biosimx

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .codespellignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage  .mailmap  .pre-commit-config.yaml  .scorecard.yml  .yamllint.yaml  ACCESSIBILITY.md  ARCHITECTURE.md  AUDIT.md  AUTHORS.md  BRANCHING.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_STYLE.md  COMPLIANCE.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  CPackConfig.cmake  CTestCustom.cmake  DCO  DETECTION.txt  Dockerfile  Doxyfile  ETHICS.md  GOVERNANCE.md  HACKING.md  LICENSE  (+23 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  RELEASE_NOTES_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  config.yml  feature.md  feature_request.yml
.github/actions/setup-biosimx/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml
.github/workflows_disabled/: actionlint.yml  asan-ubsan.yml  binary-size-budget.yml  changelog-enforcer.yml  changelog.yml  ci-advanced.yml  ci-compile-boosted.yml  ci-matrix.yml  ci.yml  clang-format-check.yml  clang-format.yml  clang-tidy.yml  cmake-format.yml  codeql.yml  codespell.yml  commitlint.yml  container-build-scan.yml  conventional-commits.yml  coverage-threshold.yml  coverage.yml  cppcheck.yml  cross-compile.yml  dco-check.yml  dco.yml  dependency-review.yml  diffoscope.yml  docs-build.yml  docs.yml  fuzz-nightly.yml  gitleaks.yml  grype.yml  hadolint.yml  iwyu.yml  labeler.yml  labels.yml  large-files-guard.yml  license-compliance.yml  license-scan.yml  licensee.yml  link-check.yml  (+30 more)
.well-known/: security.txt
cmake/: BioSimXConfig.cmake.in  CCache.cmake  CPUBaseline.cmake  CPackOptions.cmake  Cache.cmake  Config.cmake.in  ConfigVersion.cmake.in  Hardening.cmake  Install.cmake  PGO.cmake  Reproducible.cmake  Version.cmake  Visibility.cmake  Warnings.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  linux-musl.cmake  mingw-w64.cmake
completions/: biosimx.bash
configs/: default.cfg  example.cfg
debian/: changelog  control  copyright
docs/: abi-stability.md  accessibility-checklist.md  accessibility-statement.md  api-review-checklist.md  api-versioning.md  architecture-diagram.md  architecture.md  backport-policy.md  benchmarking-guide.md  benchmarking-policy.md  changelog-policy.md  cli-compatibility-policy.md  cmake-options.md  contribution-standards.md  coordinated-disclosure.md  cpu-baseline.md  data-retention-policy.md  dependency-update-policy.md  developer-guide.md  distribution-guides.md  env-variables.md  environment-variables.md  error-handling-policy.md  ethics.md  experimental-bazel.md  faq.md  first-release-guide.md  getting-started.md  governance-charter.md  hardening-flags.md  i18n-l10n.md  ide-clion.md  incident-response.md  index.md  license-compliance.md  link-check-policy.md  linting-matrix.md  logging-policy.md  maintainer-coverage.md  memory-safety-policy.md  (+35 more)
docs/adr/: 0000-template.md  0001-adopt-cmake-and-ci-matrix.md  0001-initial-architecture.md  TEMPLATE.md
docs/press/: brand-guidelines.md  press-release-1.0.md
docs/security/: cvss-policy.md  severity-matrix.md
docs/style/: inclusive-language.md
examples/: README.md  example-config.json
fuzz/: CMakeLists.txt  fuzz_args.cpp  fuzz_main.cpp
packaging/choco/: biosimx.nuspec
packaging/choco/tools/: chocolateyinstall.ps1
packaging/chocolatey/: README.txt
packaging/deb/: README.txt
packaging/docker/: Dockerfile.hardened  README.md
packaging/homebrew/: biosimx.rb
packaging/pkgconfig/: biosimx.pc.in
packaging/rpm/: README.txt  biosimx.spec
packaging/scoop/: biosimx.json
schema/: config.schema.json
scripts/: e2e_install_test.sh  generate_sbom.sh  install.sh  locale_smoke.sh  pgo_build.sh  release_dry_run.sh  run_coverage.sh  run_static_analysis.sh  uninstall.sh
src/: c_api.cpp  cli.cpp  cli_helpers.cpp  config.cpp  grid.cpp  model.cpp
tests/: CMakeLists.txt  test_core.cpp  test_properties.cpp  test_smoke.cpp  test_threads.cpp
tests/integration/: README.md
tests/property/: property_smoke.cpp
toolchains/: linux-aarch64.cmake  windows-mingw64.cmake
tools/: add_spdx_header.py  check_changelog.py  check_changelog.sh  check_conventional_commits.py  check_dco.py  check_exports.sh  check_spdx_headers.py  gen_manpage.sh  gen_shell_completions.sh  gen_version_header.sh  generate_man_and_completions.sh  preflight.sh  run_clang_format_check.sh  smoke_determinism.sh  valgrind_memcheck.sh  validate_config.py  verify_provenance.sh
tools/dev/: bootstrap.sh
tools/pgo/: train.sh
tools/release/: dry_run.sh  verify_artifact.sh
