function(add_biosimx_test name)
  add_executable(${name} ${ARGN})
  target_include_directories(${name} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../include)
  if (TARGET biosimx_lib)
    target_link_libraries(${name} PRIVATE biosimx_lib)
  endif()
  add_test(NAME ${name} COMMAND ${name})
endfunction()
add_biosimx_test(test_smoke test_smoke.cpp)
